project_sources/collector/fixtures/powershell_analysis/bad/invoke_expression.ps1
$CommandText = "Get-Process | Select-Object -First 1"
$Result = Invoke-Expression $CommandText
Write-Output $Result
